# iqr_4s_robot

./: README.md
iqr_4s_bringup/: CMakeLists.txt  package.xml
iqr_4s_bringup/launch/: iqr_4s_bring.launch
iqr_4s_bringup/launch/include/: jackal.launch.xml
iqr_4s_bringup/rules/: 40-jackal.rules
iqr_4s_description/: CMakeLists.txt  package.xml
iqr_4s_description/launch/: view_model.launch  view_robot.launch
iqr_4s_description/rviz/: view_model.rviz  view_robot.rviz
iqr_4s_description/urdf/: iqr_4s_robot.urdf.xacro  realsense_d435.xacro  sensor_support.xacro  vlp16.xacro
iqr_4s_description/urdf/mesh/: camera_support.stl  vlp16_support.stl
iqr_4s_navigation/: CMakeLists.txt  package.xml
iqr_4s_navigation/launch/: amcl_demo.launch  gmapping_demo.launch
iqr_4s_navigation/maps/: map.pgm  map.yaml
iqr_4s_navigation/rviz/: amcl.rviz  gmapping.rviz
