<?xml version="1.0"?>
<package format="2">
  <name>iqr_4s_bringup</name>
  <version>0.0.0</version>
  <description>The iqr_4s_bringup package</description>

  <maintainer email="support@iquotient-robotics.com">iqr</maintainer>

  <!-- LICENSE -->
  <license>MIT</license>

  <!-- DEPEND -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
